src/test/ui/consts/min_const_fn/min_const_fn_fn_ptr.stderr
error[E0658]: function pointers cannot appear in constant functions
  --> $DIR/min_const_fn_fn_ptr.rs:13:5
   |
LL |     x.0.field;
   |     ^^^^^^^^^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn_fn_ptr_basics)]` to the crate attributes to enable

error[E0658]: function pointer casts are not allowed in constant functions
  --> $DIR/min_const_fn_fn_ptr.rs:16:59
   |
LL | const fn no_inner_dyn_trait_ret() -> Hide { Hide(HasPtr { field }) }
   |                                                           ^^^^^
   |
   = note: see issue #57563 <https://github.com/rust-lang/rust/issues/57563> for more information
   = help: add `#![feature(const_fn_fn_ptr_basics)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
